@@ -26,6 +26,7 @@
                     <target>17</target>
                     <compilerArgs>
                         <compilerArg>-parameters</compilerArg>
+                        <compilerArg>--enable-preview</compilerArg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -70,9 +71,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.dv8tion</groupId>
+            <groupId>com.github.xirado</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.0.0-alpha.5</version>
+            <version>36eea2a1c5</version>
             <exclusions>
                 <exclusion>
                     <groupId>club.minnced</groupId>
@@ -85,7 +86,7 @@
             <groupId>com.freya02</groupId>
             <artifactId>BotCommands</artifactId>
 <!--            <version>53df90c</version>-->
-            <version>2.3.0-SNAPSHOT</version>
+            <version>2.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
